# 2017-colab-vinay_sharma

./: .gitignore  CMakeLists.txt  README.md  detect.cpp  objectdetector.yml  person.pkl  persondetector.py  read_data.py  train.py  train_conv_net.py
Camera/: camera.py
CameraNodes/publisher/: CMakeLists.txt  camera_publisher.cpp  config.yml  package.xml
CameraNodes/subscriber/: CMakeLists.txt  camera_subscriber.cpp  package.xml
GUI/: gui.py
Imagenet/: convert_data.py  faster-rcnn-person.config
automated_process/: vector_r  vector_reference.cpp
class_conversion/: MassInferencer_process  a.out  hierarchy1.xml  p_tree  p_tree_test.cpp  test.cpp  tree  tree.cpp
dataset_parsing/: .test_parsexml.cpp.swp  .xml_parsing.cpp.swp  a.out  file  file.json  filesystem.cpp  test.cpp  test.xml  test_parse.cpp  test_parse_compare.cpp  test_parse_rapidjson.cpp  test_string_map.cpp  xml_parsing.cpp
model/: conv_net.ckpt.index
python_embedding/: CMakeLists.txt  master.cpp
